--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
